fix(scroll): prevent double scroll bar on menu in max-height select

--- a/components/menu/src/styles/default/style-menu.scss
+++ b/components/menu/src/styles/default/style-menu.scss
@@ -62,8 +62,6 @@
 }
 
 :host([root]) { 
-  overflow-y: auto;
-
   .menuWrapper {
     &.lg {
       padding: var(--ds-size-150, vac.$ds-size-150);
